<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="#164591"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
                    android:orientation="vertical" tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="-79dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.556"
                app:layout_constraintVertical_bias="0.066" android:textColor="@color/colorPrimary"
                android:id="@+id/main_label"
                android:layout_marginStart="120dp"
                android:textSize="24sp" android:layout_marginTop="25dp"/>
        <TextView
                android:text="@string/main_cost_of_meter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/main_label_price_of_meter"
                android:layout_toEndOf="@id/main_label" android:layout_marginTop="85dp"
                android:textColor="@color/inputText"
                android:layout_marginStart="-324dp"/>

        <EditText
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/main_input_price_of_meter"
                tools:layout_editor_absoluteY="204dp" tools:layout_editor_absoluteX="40dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/inputText"
                android:layout_marginTop="1dp" android:layout_below="@+id/main_label_price_of_meter"/>
        <TextView
                android:text="@string/main_quantity_of_meters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/main_label_quantity_of_meters"
                android:layout_marginTop="55dp"
                android:layout_marginStart="18dp"
                android:textColor="@color/inputText"
                android:layout_below="@+id/main_label_price_of_meter"/>
        <EditText
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:textColor="@color/inputText"
                android:id="@+id/main_input_quantity_of_meters"
                android:layout_marginTop="1dp"
                android:layout_below="@+id/main_label_quantity_of_meters" android:layout_marginStart="18dp"
        />
        <TextView
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:text="@string/main_cost_of_rent"
                android:ems="10"
                android:textColor="@color/inputText"
                android:id="@+id/main_label_cost_of_rent"
                android:layout_marginStart="18dp" android:layout_marginTop="55dp"
                android:layout_below="@+id/main_label_quantity_of_meters" android:textSize="14sp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:textColor="@color/inputText"
                android:id="@+id/main_input_cost_of_rent" android:layout_marginTop="1dp"
                android:layout_below="@+id/main_label_cost_of_rent" android:layout_marginStart="18dp"/>
        <TextView
                android:text="@string/main_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/main_label_delay"
                android:layout_marginTop="65dp"
                android:textColor="@color/inputText"
                android:layout_below="@+id/main_label_cost_of_rent" android:layout_marginStart="18dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/inputText"
                android:ems="10"
                android:id="@+id/main_input_delay" android:layout_marginTop="1dp"
                android:layout_below="@+id/main_label_delay" android:layout_marginStart="18dp" android:hint="0"/>
        <TextView
                android:text="@string/main_tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/main_label_tax"
                android:layout_marginTop="65dp"
                android:textColor="@color/inputText"
                android:layout_below="@+id/main_label_delay" android:layout_marginStart="18dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:textColor="@color/inputText"
                android:id="@+id/main_input_tax" android:layout_marginTop="1dp"
                android:layout_below="@+id/main_label_tax" android:layout_marginStart="18dp" android:hint="0"/>
        <Button
                android:text="@string/main_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/main_button_next"
                android:layout_marginTop="45dp"
                android:background="#000"
                android:textColor="@color/inputText"
                android:layout_below="@+id/main_input_tax" android:layout_marginStart="150dp"/>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>